# nixos-mutable-files-manager

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: flake-check.yaml  update-flake-lock.yaml
dev/: README.md  flake.nix
docs/: module.md
nix/: docs.nix  nixos-module.nix  package.nix
src/: manage_files.py
tests/: helpers.py  integration_test.py  test_manage_files.py
