[tool.poetry]
name = "nixos-mutable-files-manager"
version = "0.1.0"
description = ""
authors = []
# readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
expression = "^4"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "^4"
mypy = "^1"

[tool.pytest.ini_options]
pythonpath = "project"
addopts = ["--import-mode=importlib"]

[tool.poetry.scripts]
nixos-mutable-files-manager = "src.manage_files:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
